# Vizora

./: .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  pyproject.toml
artifacts/0f2d95f5-5f75-48d3-8f7f-56428541305d/: meta.json  model.joblib
artifacts/3624ba56-4c8f-4fbb-9fd3-37a3ac266fbd/: meta.json
artifacts/39a16ad1-97f5-41ad-b68a-9168efd3a6e0/: meta.json  model.joblib
artifacts/7b166715-19ba-4a7d-9af9-183c87857c58/: meta.json
artifacts/98ef7c08-de60-4f29-a670-df30bea02844/: meta.json  model.joblib
artifacts/cf6a6c08-a447-4789-b8a1-78c81d3267a1/: meta.json  model.joblib
frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/context/: AnalysisContext.tsx  AuthContext.tsx  BillingContext.tsx
frontend/src/hooks/: usePolling.ts
frontend/src/lib/: supabase.ts
frontend/src/pages/: AuthPages.css  ContactPage.tsx  HomePage.css  HomePage.tsx  LegalPage.css  LoginPage.tsx  ModeSelectionPage.css  ModeSelectionPage.tsx  PricingPage.css  PricingPage.tsx  PrivacyPage.tsx  RefundsPage.tsx  ResultsPage.css  ResultsPage.tsx  SchedulesPage.css  SchedulesPage.tsx  SheetsPage.css  SheetsPage.tsx  SignupPage.tsx  TermsPage.tsx  UploadPage.css  UploadPage.tsx
frontend/src/types/: index.ts
frontend/src/utils/: models.ts
output/: results.json  summary.md
vizora/: config.py  pipeline.py
vizora/llm/: client.py  prompts.py  schemas.py
vizora/steps/: executor.py  profiling.py
vizora/web/: __init__.py  app.py
vizora/web/auth/: __init__.py  dependencies.py  schemas.py  supabase_client.py
vizora/web/billing/: __init__.py  service.py  stripe_client.py
vizora/web/google/: __init__.py  oauth.py  sheets.py
vizora/web/models/: __init__.py  requests.py  responses.py
vizora/web/routes/: __init__.py  analysis.py  auth.py  billing.py  google.py  health.py  schedules.py
vizora_cli/: main.py
(+33 files in other folders)
