[project]
name = "vizora"
version = "0.1.0"
description = ""
authors = [
    {name = "Brandon-Nicholson",email = "brandon.s.nicholson@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "openai (>=2.14.0,<3.0.0)",
    "numpy (>=2.4.0,<3.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "rapidfuzz (>=3.14.3,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "typer (>=0.21.1,<0.22.0)",
    "rich (>=14.2.0,<15.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
